# mcp_client

./: Cargo.toml  README.md  config.toml
src/: chat.rs  config.rs  main.rs
src/config/: mcp.rs
